--- a/7.springboot-dubbo/provider/src/main/resources/application.properties
+++ b/7.springboot-dubbo/provider/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8899
+
 ## Dubbo 服务提供者配置
 spring.dubbo.application.name=provider
 spring.dubbo.registry.address=zookeeper://127.0.0.1:2181
